lint and drop draft from title

--- a/journal/202112.md
+++ b/journal/202112.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – December 2021
+# Decred Journal – December 2021
 
 ![abstract art by @saender](../img/202112.1.github.png)
 
@@ -306,7 +306,7 @@ The count of VSP-managed tickets has been trending down since at least June 2021
 
 **Nodes**: Throughout December there were around 180 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of Jan 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (216 total, dcrd only):  v1.6.2 - 62%, v1.7 dev builds - 13%, v1.6.0 - 10%, v1.6.1 - 8%, v1.6 dev builds - 3%, v1.5.2 - 2.3%, v1.5.1 - 1.4%.
+Node versions as of Jan 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (216 total, dcrd only): v1.6.2 - 62%, v1.7 dev builds - 13%, v1.6.0 - 10%, v1.6.1 - 8%, v1.6 dev builds - 3%, v1.5.2 - 2.3%, v1.5.1 - 1.4%.
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q3lq8-l0s732o6&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 54.4-56.9% and set a new all-time high with the sum of mixed unspent coins above 7.8 million.
 
@@ -339,8 +339,8 @@ Monde PR's achievements for December:
 Secured the following news articles:
 
 - Decred was mentioned as a top crypto in [CoinDesk](https://www.coindesk.com/business/2021/12/01/shiba-inu-memes-are-the-future-of-money/). The article was syndicated to [Nasdaq](https://www.nasdaq.com/articles/shiba-inu%3A-memes-are-the-future-of-money) and [Yahoo!](https://finance.yahoo.com/news/shiba-inu-memes-future-money-171404107.html).
-- an article in [Finder.com](https://www.finder.com/ke/litecoin-ltc-price-prediction) featuring commentary from @jz on Litecoin 
-- an article in [Finder.com](https://www.finder.com/ke/ripple-xrp-price-prediction) featuring commentary from @jz on Ripple 
+- an article in [Finder.com](https://www.finder.com/ke/litecoin-ltc-price-prediction) featuring commentary from @jz on Litecoin
+- an article in [Finder.com](https://www.finder.com/ke/ripple-xrp-price-prediction) featuring commentary from @jz on Ripple
 - an article in [Geek Culture](https://medium.com/geekculture/which-two-altcoins-could-overtake-ethereum-in-the-ongoing-bull-run-84316d955cc0) featuring commentary from @jz on Ethereum. The article was also syndicated to [Concierge](https://coincierge.de/2021/top-investor-sicher-diese-zwei-altcoins-werden-ethereum-im-laufenden-bull-run-noch-ueberholen/).
 
 
