reword end announcement

--- a/journal/202112.md
+++ b/journal/202112.md
@@ -26,6 +26,7 @@ Contents:
 - [Media](#media)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
+- [The Future of Decred Journal](#the-future-of-decred-journal)
 
 
 ## v1.7 Release Testing
@@ -382,7 +383,7 @@ That's all for December. Thanks for reading!
 
 ## The Future of Decred Journal
 
-> 45 months of Decred Journal have been a great ride but things are changing for me now. I do not plan to keep producing DJ after this issue due to lack of time and energy that I need elsewhere in Decred and beyond.
+> 45 months of Decred Journal was a great ride but recent issues were getting increasingly harder to make due to lack of time and energy. I plan to stop producing DJ after this issue, take a break, and do other things I wanted to do in Decred and beyond.
 > 
 > I will be around in chats to help anyone willing to take over the production of DJ, either as it looks today, or in a refreshed form to make it better.
 > 
