--- a/journal/202204.md
+++ b/journal/202204.md
@@ -57,7 +57,8 @@ _dcrctl is a command-line client for dcrd and dcrwallet._
 
 _Decrediton is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
-- DEX [login will be skipped](https://github.com/decred/decrediton/pull/3749) once the DEX is launched. This should smooth out the working flow and make loading up the Dex window faster.
+- DCRDEX [login will be skipped](https://github.com/decred/decrediton/pull/3749) once the DEX is launched. This should smooth out the working flow and make loading up the Dex window faster.
+- DCRDEX updated to [v0.4.3](https://github.com/decred/decrediton/pull/3748) with some important bug fixes and new features
 
 <a id="politeia" />
 
