--- a/journal/202204.md
+++ b/journal/202204.md
@@ -61,6 +61,7 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 - DCRDEX updated to [v0.4.3](https://github.com/decred/decrediton/pull/3748) with some new features and important bug fixes. More in the DEX section.
 - Per-account encryption is now automatic for [restored wallets](https://github.com/decred/decrediton/pull/3746).
 - Performance improvements in the [transactions history tab](https://github.com/decred/decrediton/pull/3745). Notably, Rows are now loaded gradually using the infinite scroll's functionality, which will reduce bottlenecks and sluggishness. 
+- The Staking tab now features [an infographic](https://github.com/decred/decrediton/pull/3740) for first time ticket buyers, reminding users the basics of Decred's time-locked ticket-based voting system.
 
 <a id="politeia" />
 
