--- a/journal/202204.md
+++ b/journal/202204.md
@@ -41,7 +41,9 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 _dcrwallet is a wallet server used by command-line and graphical wallet applications._
 
-- {}
+- Defualt [fee amount](https://github.com/decred/dcrwallet/pull/2149) constant is now more readable.
+- Updated to [latest gRPC](https://github.com/decred/dcrwallet/pull/2143)
+- Updates for [Go 1.18](https://github.com/decred/dcrwallet/pull/2143)
 
 <a id="dcrctl" />
 
