--- a/journal/202204.md
+++ b/journal/202204.md
@@ -43,7 +43,6 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 
 - Defualt [fee amount](https://github.com/decred/dcrwallet/pull/2149) constant is now more readable.
 - Updated to [latest gRPC](https://github.com/decred/dcrwallet/pull/2143)
-- Updates for [Go 1.18](https://github.com/decred/dcrwallet/pull/2143)
 
 <a id="dcrctl" />
 
@@ -51,7 +50,7 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 
 _dcrctl is a command-line client for dcrd and dcrwallet._
 
-- Updated for [Go 1.18](https://github.com/decred/dcrctl/pull/45).
+- 
 
 <a id="decrediton" />
 
@@ -162,7 +161,7 @@ _dcrweb is the source code for the decred.org website._
 
 }
 
-Other:
+Other: Updats for [Go 1.18](https://github.com/decred/dcrctl/pull/45) in many repos.
 
 - { smaller items go here }
 
