--- a/journal/202204.md
+++ b/journal/202204.md
@@ -65,6 +65,7 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 - The Staking tab now features [an infographic](https://github.com/decred/decrediton/pull/3740) for first time ticket buyers, reminding users the basics of Decred's time-locked ticket-based voting system.
 - SPV mode is [no longer experimental](https://github.com/decred/decrediton/pull/3739) for the DCRDEX. Users can access the DEX tab while running Decredition in SPV mode.
 - An [alert](https://github.com/decred/decrediton/pull/3736) is now in place in the Governance tab when using any un-upgraded VSP. Voted tickets will not have their voting preferences relayed on un-upgraded VSP's. 
+- Vote choices have been added to [transaction details](https://github.com/decred/decrediton/pull/3730).
 
 <a id="politeia" />
 
