--- a/journal/202204.md
+++ b/journal/202204.md
@@ -77,6 +77,7 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 - An exported [initialization function](https://github.com/decred/politeia/pull/1634) for the tstore client has been added. This is used by plugins.
 - [legacypoliteia](https://github.com/decred/politeia/pull/1631), a CLI tool that will be used to convert and import legacy git backend data into the tstore backend has been added.
+- Plugin Architecture [doc added](https://github.com/decred/politeia/pull/1628).
 
 <a id="vspd" />
 
