--- a/journal/202204.md
+++ b/journal/202204.md
@@ -66,7 +66,7 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 - SPV mode is [no longer experimental](https://github.com/decred/decrediton/pull/3739) for the DCRDEX. Users can access the DEX tab while running Decredition in SPV mode.
 - An [alert](https://github.com/decred/decrediton/pull/3736) is now in place in the Governance tab when using any un-upgraded VSP. Voted tickets will not have their voting preferences relayed on un-upgraded VSP's. 
 - Vote choices have been added to [transaction details](https://github.com/decred/decrediton/pull/3730) when a ticket is called to vote.
-- UI now more clearly [displays alerts](https://github.com/decred/decrediton/pull/3726) for new Politeia and Consensus votes.
+- UI now more clearly [notifies users](https://github.com/decred/decrediton/pull/3726) about new Politeia and Consensus votes.
 - A [Treasury Spending Tab](https://github.com/decred/decrediton/pull/3718) has been introduced. This is where users will vote on treasury spends.
 
 <a id="politeia" />
