--- a/journal/202204.md
+++ b/journal/202204.md
@@ -58,7 +58,7 @@ _dcrctl is a command-line client for dcrd and dcrwallet._
 
 _Decrediton is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
-- DCRDEX [login will be skipped](https://github.com/decred/decrediton/pull/3749) once the DEX is launched. This should make loading up the DEX faster.
+- DCRDEX [login will be skipped](https://github.com/decred/decrediton/pull/3749) once the DEX is initially launched. This should make loading up the DEX faster and improve general workflow.
 - DCRDEX updated to [v0.4.3](https://github.com/decred/decrediton/pull/3748) with some new features and important bug fixes. More in the DEX section.
 - Per-account encryption is now automatic for [restored wallets](https://github.com/decred/decrediton/pull/3746).
 - Performance improvements in the [transactions history tab](https://github.com/decred/decrediton/pull/3745). Notably, rows are now loaded gradually using the infinite scroll's functionality, which will reduce bottlenecks and sluggishness. 
