--- a/journal/202204.md
+++ b/journal/202204.md
@@ -292,7 +292,10 @@ Videos:
 
 - [Decred News Update - On-Chain Voting Underway, dcrd 1.7.1, LN Upgrades, Subsidy Change + New Host!](https://youtu.be/BSHywc5qRzU) by @Exitus
 - [Decred DEX Tutorial: Peer-to-Peer Atomic Swap Trading](https://youtu.be/XaE_xzGKjeQ) by @Exitus
-- 
+- [Decred Block Explorer - DCRDATA Series Part 1](https://youtu.be/o4Cye1CRThs) by @DecredSociety
+- [Hard Fork vs Soft Fork - Decred Fundamentals](https://youtu.be/DmkQrk3OInU) by @Decred Society
+
+
 
 Audio:
 
