--- a/journal/202204.md
+++ b/journal/202204.md
@@ -286,7 +286,9 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- [Top 10 Privacy Coins & How To Buy Them](https://www.binance.com/en/blog/fiat/top-10-privacy-coins--how-to-buy-them-421499824684903655) by Binance 
+
+
 
 Videos:
 
