--- a/journal/202204.md
+++ b/journal/202204.md
@@ -296,7 +296,14 @@ Videos:
 - [Decred DEX Tutorial: Peer-to-Peer Atomic Swap Trading](https://youtu.be/XaE_xzGKjeQ) by @Exitus
 - [Decred Block Explorer - DCRDATA Series Part 1](https://youtu.be/o4Cye1CRThs) by @DecredSociety
 - [Hard Fork vs Soft Fork - Decred Fundamentals](https://youtu.be/DmkQrk3OInU) by @Decred Society
+- [Six Years of Decred - Part 1](https://www.youtube.com/watch?v=0Z50aW-RZtw) by @DecredSociety
+- [Six Years of Decred - Part 2](https://www.youtube.com/watch?v=CI4yFLfHnqc) by @DecredSociety
+- [What Is Decred (DCR) Crypto And How Is It Performing?](https://www.youtube.com/watch?v=30waU59s4Jk) by Kalkine Media
 
+A new monthly LiveStream initiative has been started by @DecredSociety and @Exitus called Decred and the State of the Market. Any eager community members are welcome to join!
+
+- [Sanctions, Confiscation and Regulations](https://www.youtube.com/watch?v=t3KQ4UhNNOI)
+- [Stable Coins and DAO's](https://www.youtube.com/watch?v=a5W_90nuJQ8)
 
 
 Audio:
