--- a/journal/202204.md
+++ b/journal/202204.md
@@ -187,12 +187,12 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 Community stats as of {date}:
 
 - Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
+- [Twitter](https://twitter.com/decredproject) followers: {54,862} (+3,946)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: {12,621} (+133)
+- [Matrix](https://chat.decred.org/) #general users: {662} (+63)
+- [Discord](https://discord.gg/GJ2GXfz) users: {2,293} (+118)
+- [Telegram](https://t.me/Decred) users: {2,828} (-332)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: {4,639} (-1), views: {214K} (+14K)
 
 { maybe list/link notable SM activity }
 
