--- a/journal/202204.md
+++ b/journal/202204.md
@@ -184,14 +184,14 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 { interviews about people. link to #media for generic references ("3 interviews") and link directly for specific references and/or with quotes }
 
-Community stats as of {date}:
+Community stats as of May 2 (compared against statistics from December's DCR Journal):
 
 - Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {54,862} (+3,946)
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {12,621} (+133)
-- [Matrix](https://chat.decred.org/) #general users: {662} (+63)
-- [Discord](https://discord.gg/GJ2GXfz) users: {2,293} (+118)
-- [Telegram](https://t.me/Decred) users: {2,828} (-332)
+- [Twitter](https://twitter.com/decredproject) followers: 54,862 (+3,946)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,621 (+133)
+- [Matrix](https://chat.decred.org/) #general users: 662 (+63)
+- [Discord](https://discord.gg/GJ2GXfz) users: 2,293 (+118)
+- [Telegram](https://t.me/Decred) users: 2,828 (-332)
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: {4,639} (-1), views: {214K} (+14K)
 
 { maybe list/link notable SM activity }
