--- a/journal/202204.md
+++ b/journal/202204.md
@@ -277,8 +277,10 @@ Upcoming:
 
 ## Media
 
-{ notable community efforts }
+[Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) has written a cloud-based Decred [full-node tutorial](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) using Digital Ocean.
 
+Why run a full node you might ask?
+Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness. There are also [Raspberry PI Tutorials](https://youtu.be/B-5O_GBcbV0) available.
 { ratings news }
 
 { hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
