--- a/journal/202204.md
+++ b/journal/202204.md
@@ -93,7 +93,7 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 
 _cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
 
-- {}
+-  Coinshuffle++ will soon be tested and simulated using [peer to peer as mixing](https://twitter.com/behindtext/status/1506941924585967619) as opposed to relying on a central server.
 
 <a id="dcrdex" />
 
