--- a/journal/202204.md
+++ b/journal/202204.md
@@ -127,7 +127,7 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
-- {}
+- Initial [DEX integration](https://github.com/planetdecred/godcr/pull/722) work is on-going.
 
 <a id="dcrdata" />
 
