--- a/journal/202204.md
+++ b/journal/202204.md
@@ -42,13 +42,13 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 - Defualt [fee amount](https://github.com/decred/dcrwallet/pull/2149) constant is now more readable.
 - Updated to [latest gRPC](https://github.com/decred/dcrwallet/pull/2143)
 
-<a id="dcrctl" />
+<a id="dcrctl" w/>
 
 **[dcrctl](https://github.com/decred/dcrctl)**
 
 _dcrctl is a command-line client for dcrd and dcrwallet._
 
-- 
+-  Version now supports single override and adds [git commit](https://github.com/decred/dcrctl/pull/44) hash.
 
 <a id="decrediton" />
 
