--- a/journal/202204.md
+++ b/journal/202204.md
@@ -128,6 +128,8 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
 - Initial [DEX integration](https://github.com/planetdecred/godcr/pull/722) work is on-going.
+- Proposal details [displayed in a modal](https://github.com/planetdecred/godcr/pull/901) instead of tooltip.
+- 
 
 <a id="dcrdata" />
 
