--- a/journal/202204.md
+++ b/journal/202204.md
@@ -101,6 +101,7 @@ _cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. 
 _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swaps._
 
 - The Litecoin code now makes use of and [requires Segwit](https://github.com/decred/dcrdex/pull/1554).
+- Support added for [Dogecoin](https://github.com/decred/dcrdex/pull/1558).
 
 <a id="dcrandroid" />
 
