--- a/journal/202204.md
+++ b/journal/202204.md
@@ -102,6 +102,8 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 - The Litecoin code now makes use of and [requires Segwit](https://github.com/decred/dcrdex/pull/1554).
 - Support added for [Dogecoin](https://github.com/decred/dcrdex/pull/1558).
+- Support added for [Zcash](https://github.com/decred/dcrdex/pull/1570). Note: Wallet does not support encryption, so no passwords.
+- Client now sets atomic-swap [confirmation deadlines](https://github.com/decred/dcrdex/pull/1552) per asset.
 
 <a id="dcrandroid" />
 
