--- a/journal/202204.md
+++ b/journal/202204.md
@@ -104,6 +104,7 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 - Support added for [Dogecoin](https://github.com/decred/dcrdex/pull/1558).
 - Support added for [Zcash](https://github.com/decred/dcrdex/pull/1570). Note: Wallet does not support encryption, so no passwords.
 - Client now sets atomic-swap [confirmation deadlines](https://github.com/decred/dcrdex/pull/1552) per asset.
+- Tor [hidden service](https://github.com/decred/dcrdex/pull/1575) support added. This introduces special handling for DEX hosts with .onion names.
 
 <a id="dcrandroid" />
 
