--- a/journal/202204.md
+++ b/journal/202204.md
@@ -106,6 +106,7 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 - Client now sets atomic-swap [confirmation deadlines](https://github.com/decred/dcrdex/pull/1552) per asset.
 - Tor [hidden service](https://github.com/decred/dcrdex/pull/1575) support added. This introduces special handling for DEX hosts with .onion names.
 - Ethereum transactions now [link to etherscan](https://github.com/decred/dcrdex/pull/1572) on the orders page.
+- The DEX Registration [UI has been updated](https://github.com/decred/dcrdex/pull/1589) to account for v3 .onion addresses. The UI also clarifes the registration fee process.
 - 
 
 <a id="dcrandroid" />
