--- a/journal/202204.md
+++ b/journal/202204.md
@@ -271,7 +271,8 @@ Upcoming:
 
 Why run a full node you might ask?
 Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness. There are also [Raspberry PI Tutorials](https://youtu.be/B-5O_GBcbV0) available.
-{ ratings news }
+
+Decred society has created a [website](https://www.decredsociety.com/) dedicated to Decred related ideas, news, and other aspects. Applesaucesome also posts technicals and other information.  
 
 { hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
 
