--- a/journal/202204.md
+++ b/journal/202204.md
@@ -297,7 +297,7 @@ A new monthly LiveStream initiative has been started by @DecredSociety and @Exit
 - [Sanctions, Confiscation and Regulations](https://www.youtube.com/watch?v=t3KQ4UhNNOI)
 - [Stable Coins and DAO's](https://www.youtube.com/watch?v=a5W_90nuJQ8)
 
-
+- TikTok Videos
 Audio:
 
 - {}
