--- a/journal/202204.md
+++ b/journal/202204.md
@@ -100,6 +100,8 @@ _cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. 
 
 _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swaps._
 
+DCRDEX development is on fire. SPV mode is now completed for use in Decredition. Dogecoin has been added. Zcash and Ethereum are making steady progress on testnet. Tor hidden service support is ready. The registration UI, which was a bit confusing for some, has been clarified.
+
 - The Litecoin code now makes use of and [requires Segwit](https://github.com/decred/dcrdex/pull/1554).
 - Support added for [Dogecoin](https://github.com/decred/dcrdex/pull/1558).
 - [Zcash](https://github.com/decred/dcrdex/pull/1570) support in progress. Note: Wallet does not support encryption, so no passwords.
@@ -109,6 +111,7 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 - The DEX Registration [UI has been updated](https://github.com/decred/dcrdex/pull/1589) to account for v3 .onion addresses. The UI also clarifes the registration fee process.
 - [Privacy enhancements](https://github.com/decred/dcrdex/pull/1584) to protect against memory scraping attacks targeting user passwords and seeds.
 - Swap [contract expiry](https://github.com/decred/dcrdex/pull/1548) is taken into consideration. Better contract expiry [edge case handling](https://github.com/decred/dcrdex/pull/1541). 
+- Various bug fixes, optimizations, and other improvements.
 
 <a id="dcrandroid" />
 
