--- a/journal/202204.md
+++ b/journal/202204.md
@@ -134,7 +134,7 @@ DCRDEX development is on fire. SPV mode is now completed for use in Decredition.
 - Users can use [Biometrics](https://github.com/planetdecred/dcrios/pull/883) such as Touch/Face ID for their Pin/Password. 
 - Info icon added to explain how the [transaction byte size](https://github.com/planetdecred/dcrios/pull/876) is determined.
 - [Privacy account](https://github.com/planetdecred/dcrios/pull/906) setup has been optimized. 
-- 
+- Various tweaks, bug fixes, and other optimizations. 
  In progress: 
  
 - New [Proposals UI](https://github.com/planetdecred/dcrios/issues/890)
