--- a/journal/202204.md
+++ b/journal/202204.md
@@ -142,10 +142,11 @@ DCRDEX development is on fire. SPV mode is now completed for use in Decredition.
 
 _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
-- Initial [DEX integration](https://github.com/planetdecred/godcr/pull/722) work is on-going.
+- Initial [DEX integration](https://github.com/planetdecred/godcr/pull/722) work is on-going. [Wallet setup](https://github.com/planetdecred/godcr/pull/798) is completed, along with the [DEX registration](https://github.com/planetdecred/godcr/pull/900) function
 - Proposal details [displayed in a modal](https://github.com/planetdecred/godcr/pull/901) instead of tooltip.
 - New [add wallet](https://github.com/planetdecred/godcr/pull/897) button layout implemented.
 - [Staking Updates](https://github.com/planetdecred/godcr/pull/888). 
+- Various code refactoring and other fixes.
 
 <a id="dcrdata" />
 
