--- a/journal/202204.md
+++ b/journal/202204.md
@@ -211,7 +211,7 @@ See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the mo
 
 { section hint: use the same `zoom` parameter for all dcrdata links }
 
-**Hashrate**: April's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l17cv9hx-l2odxr6y&bin=day&axis=time) opened at ~261 Ph/s and closed ~331 Ph/s, bottoming at 243 Ph/s and peaking at 331 Ph/s throughout the month.
+**Hashrate**: April's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l1ezonii-l2odxr6y&bin=day&axis=time) opened at ~261 Ph/s and closed ~331 Ph/s, bottoming at 243 Ph/s and peaking at 331 Ph/s throughout the month.
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
