--- a/journal/202204.md
+++ b/journal/202204.md
@@ -221,9 +221,9 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l1ezonii-l2odxr6y&bin=window&axis=time&visibility=true-false) varied between 195.14-227.69 DCR, with 30-day [average](https://dcrstats.com/) at 214.2 DCR
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1f4wx35-l2oj60rl&bin=day&axis=time) was 8,597,024-8,885,391 million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) in proof-of-stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1f4wx35-l2oj60rl&bin=day&axis=time) was 8,597,024-8,885,391 million DCR, meaning that 61.35%-63.03% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l1f4wx35-l2oj60rl&bin=day&axis=time) in proof-of-stake.
 
-{ recap of ticket price action if it was interesting }
+63.03% of the supply staked represents a new **All-Time-High!**
 
 **VSP**: On {}, {} (+{}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and {} (-{}) by listed legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool.
 
