--- a/journal/202204.md
+++ b/journal/202204.md
@@ -223,9 +223,9 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 **VSP**: On May 10, ~6,778 live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 116 by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 16.8% of the ticket pool. 
 
-**Nodes**: Throughout April there were around {n} reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
+**Nodes**: Throughout April there were around 174 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z - n%, ... }
+Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: dcrd:1.7.1 48.6%, dcrd:1.7.0, 16.6%, dcrd:1.7.0(pre) 9%, dcrd:1.6.2 5%, dcrd:1.8.0(pre) 4%, dcrd:1.6.0 2%, dcrd:1.7.2 2%, dcrd:1.5.2 2%, other 7%.
 
 { maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
