--- a/journal/202204.md
+++ b/journal/202204.md
@@ -227,9 +227,9 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: dcrd:1.7.1 48.6%, dcrd:1.7.0, 16.6%, dcrd:1.7.0(pre) 9%, dcrd:1.6.2 5%, dcrd:1.8.0(pre) 4%, dcrd:1.6.0 2%, dcrd:1.7.2 2%, dcrd:1.5.2 2%, other 7%.
 
-{ maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=l0vk2hlo-l2pbss4i&scale=linear&bin=block&axis=time&visibility=true-true-true) varied between 57.86%-59.30%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom=l0zwr2c4-l2ng683e&bin=day&axis=time&visibility=true-false) varied between 288,041-446,060 DCR.
 
- Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.50 DCR as of May 10th.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.50 DCR as of May 10th.
 
 
 ## Ecosystem
