--- a/journal/202204.md
+++ b/journal/202204.md
@@ -228,9 +228,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 7
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best }
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
-
-{ check https://github.com/decred/dcrwebapi/pulls for new VSPs }
+A new VSP titled [big.decred.energy](https://github.com/decred/dcrwebapi/pull/161) run by [@DCR_uncle](https://twitter.com/DCR_Uncle) is in the process of being added to the official VSP pool.
 
 { check #services for news }
 
