--- a/journal/202204.md
+++ b/journal/202204.md
@@ -245,17 +245,10 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 ## Events
 
 Attended:
-https://decredcommunity.github.io/events/index/20220326.1
-https://twitter.com/exitusdcr/status/1506118577035825157
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+[Exitus attended a cryptocurrency meetup](https://twitter.com/exitusdcr/status/1506118577035825157) at the Hashhouse in Medellin, Colombia on March 21. There he informed attendees about Decred and it's unique features.
 
-Upcoming:
-
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{ announcements from events ppl }
-
+[Insaf Nori](https://twitter.com/in_insaf/status/1506976446044114944) was invited to talk about [Blockchain Technology](https://decredcommunity.github.io/events/index/20220326.1) and Decred Technology at the half-day training organized for their members.
 
 ## Media
 
