--- a/journal/202204.md
+++ b/journal/202204.md
@@ -319,9 +319,8 @@ Selected Twitter discussions:
 
 ## Markets
 
-In April DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In April DCR was trading between USD $52.40-$86.2 / BTC 0.001295-0.002163. The average daily rate was $57.22.
 
-{ markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
 { dcrdex updates, esp. volume }
 
