--- a/journal/202204.md
+++ b/journal/202204.md
@@ -56,6 +56,8 @@ _dcrctl is a command-line client for dcrd and dcrwallet._
 
 _Decrediton is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
+Decredition 1.7.2 will include many improvements. Users are urged to [upgrade](https://decred.org/wallets/) when it is released.
+
 - DCRDEX [login will be skipped](https://github.com/decred/decrediton/pull/3749) once the DEX is initially launched. This should make loading up the DEX faster and improve general workflow.
 - DCRDEX updated to [v0.4.3](https://github.com/decred/decrediton/pull/3748) with some new features and important bug fixes. More in the DEX section.
 - Per-account encryption is now automatic for [restored wallets](https://github.com/decred/decrediton/pull/3746).
