--- a/journal/202204.md
+++ b/journal/202204.md
@@ -203,6 +203,8 @@ See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the mo
 
 ## Network
 
+The total [circulating supply](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=ikd7pc00-la35slc0&bin=day&axis=time&visibility=true-true-false) has surpassed 14,000,00 coins.
+
 **Hashrate**: April's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l1ezonii-l2odxr6y&bin=day&axis=time) opened at ~261 Ph/s and closed ~331 Ph/s, bottoming at 243 Ph/s and peaking at 331 Ph/s throughout the month.
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 10th: poolin.me 52.3%, viabtc.net 24%, f2pool.com 8%, antpool.com 6%, luxor.tech 5%, pool.btc.com 3%, coinmine.pl and okx.com less than 1%.
@@ -294,7 +296,7 @@ Art and fun:
 - [Decred is the Jack of all Trades](https://twitter.com/exitusdcr/status/1513394638446542849) by @Exitus
 - [DCRDEX Atomic-Swap Art](https://twitter.com/exitusdcr/status/1518466782037745666) by Exitus
 
-Please post yours memes in the #DCR Memes channel on Disocrd or Matrix!
+Please post yours memes in the #DCR Memes channel on Discord or Matrix!
 
 Translations:
 
