--- a/journal/202204.md
+++ b/journal/202204.md
@@ -106,6 +106,7 @@ DCRDEX development is on fire. SPV mode is now completed for use in Decredition.
 
 - The Litecoin code now makes use of and [requires Segwit](https://github.com/decred/dcrdex/pull/1554).
 - Support added for [Dogecoin](https://github.com/decred/dcrdex/pull/1558).
+- a[Block Deseralizer](https://github.com/decred/dcrdex/pull/1596) function has been added to the Doge client in order for it to function properly.
 - [Zcash](https://github.com/decred/dcrdex/pull/1570) support in progress. Note: Wallet does not support encryption, so no passwords.
 - Client now sets atomic-swap [confirmation deadlines](https://github.com/decred/dcrdex/pull/1552) per asset.
 - Tor [hidden service](https://github.com/decred/dcrdex/pull/1575) support added. This introduces special handling for DEX hosts with .onion names.
