--- a/journal/202204.md
+++ b/journal/202204.md
@@ -31,7 +31,12 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 _dcrd is a full node implementation that powers Decred's peer-to-peer network around the world._
 
-- {}
+- [Documentation for backports](https://github.com/decred/dcrd/pull/2934) has been added to docs.
+- ReadME.md has been updated for the [new subsidy calculations](https://github.com/decred/dcrd/pull/2933).
+- queueHandler process [cleaned up](https://github.com/decred/dcrd/pull/2929) for rpcserver.
+- Test chain generator [updated](https://github.com/decred/dcrd/pull/2928) for deprecated subsidy parameters. 
+- Implemented a [subsidy cache](https://github.com/decred/dcrd/pull/2920) with functions to calculate subsidies for proof-of-work, votes, and the treasury and includes a full suite of tests and benchmarks.
+- Various bug fixes, code optimizations, and other improvements, especially for the major [subsidy split consensus change](.
 
 <a id="dcrwallet" />
 
