--- a/journal/202204.md
+++ b/journal/202204.md
@@ -31,11 +31,13 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 _dcrd is a full node implementation that powers Decred's peer-to-peer network around the world._
 
+- [Optimized old block](https://github.com/decred/dcrd/pull/2912) version upgrade checks.
 - [Documentation for backports](https://github.com/decred/dcrd/pull/2934) has been added to docs.
 - ReadME.md has been updated for the [new subsidy calculations](https://github.com/decred/dcrd/pull/2933).
 - queueHandler process [cleaned up](https://github.com/decred/dcrd/pull/2929) for rpcserver.
 - Test chain generator [updated](https://github.com/decred/dcrd/pull/2928) for deprecated subsidy parameters. 
 - Implemented a [subsidy cache](https://github.com/decred/dcrd/pull/2920) with functions to calculate subsidies for proof-of-work, votes, and the treasury. Also includes a full suite of tests and benchmarks.
+- Fixed error handling in [compact signature recovery](https://github.com/decred/dcrd/pull/2914) to be consistent with the rest of the code base.
 - Various bug fixes, code optimizations, and other improvements, especially for the major [subsidy split consensus change](.
 
 <a id="dcrwallet" />
@@ -287,6 +289,7 @@ Videos:
 - [Six Years of Decred - Part 1](https://www.youtube.com/watch?v=0Z50aW-RZtw) by @DecredSociety
 - [Six Years of Decred - Part 2](https://www.youtube.com/watch?v=CI4yFLfHnqc) by @DecredSociety
 - [What Is Decred (DCR) Crypto And How Is It Performing?](https://www.youtube.com/watch?v=30waU59s4Jk) by Kalkine Media
+- 
 
 A new monthly LiveStream initiative has been started by @DecredSociety and @Exitus called Decred and the State of the Market. Any eager community members are welcome to join!
 
