--- a/journal/202204.md
+++ b/journal/202204.md
@@ -297,7 +297,8 @@ A new monthly LiveStream initiative has been started by @DecredSociety and @Exit
 - [Stable Coins and DAO's](https://www.youtube.com/watch?v=a5W_90nuJQ8)
 
 - TikTok Videos
-Audio:
+[TikTok talking about the importance of the DCR Treasury](https://www.tiktok.com/@decred_crypto/video/7081478628759833861?_t=8R7FOlqxfZ8&_r=1) by @Exitus and @DCR_Dajana
+[Tiktok about Cathie Wood mentioning Decred](https://twitter.com/DajanaDcr/status/1511162514779914241) by @Exitus and @DCR_Dajana
 
 - {}
 
