--- a/journal/202204.md
+++ b/journal/202204.md
@@ -317,11 +317,11 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- https://www.reddit.com/r/decred/comments/ueaqrt/comment/i6zx6v6/?utm_source=share&utm_medium=web2x&context=3
+- [Lead Developer for Decred responds to FUD from PoW miners regarding the 10/80 Consensus change](https://www.reddit.com/r/decred/comments/ueaqrt/when_is_the_108010_system_is_gonna_take_place/i6zx6v6/?utm_source=share&utm_medium=web2x&context=3) by @davecgh
 
 Selected Twitter discussions:
 
-- https://twitter.com/PermabullNino/status/1516441186763952140?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1516441186763952140%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.redditmedia.com%2Fmediaembed%2Fu8k2wm%3Fresponsive%3Dtrueis_nightmode%3Dtrue
+- [Tracking DCR Suppy vs Demand](https://twitter.com/PermabullNino/status/1516441186763952140?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1516441186763952140%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.redditmedia.com%2Fmediaembed%2Fu8k2wm%3Fresponsive%3Dtrueis_nightmode%3Dtrue) by @PermaBullNino
 
 
 ## Markets
