--- a/journal/202204.md
+++ b/journal/202204.md
@@ -322,6 +322,9 @@ Selected Reddit posts:
 Selected Twitter discussions:
 
 - [Tracking DCR Suppy vs Demand](https://twitter.com/PermabullNino/status/1516441186763952140?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1516441186763952140%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.redditmedia.com%2Fmediaembed%2Fu8k2wm%3Fresponsive%3Dtrueis_nightmode%3Dtrue) by @PermaBullNino
+- [Decred Decentralized](https://twitter.com/behindtext/status/1520039910350237698) by @jy-p
+- [Learning the inner-workings of Decred](https://twitter.com/DCR_Uncle/status/1515224110682415106) by @DCR_Uncle
+- [Comparing PoW vs PoS](https://twitter.com/behindtext/status/1514626081902505985) by @jy-p
 
 
 ## Markets
