--- a/journal/202204.md
+++ b/journal/202204.md
@@ -294,7 +294,8 @@ A new monthly LiveStream initiative has been started by @DecredSociety and @Exit
 **Art and fun:**
 
 - [Decred is the Jack of all Trades](https://twitter.com/exitusdcr/status/1513394638446542849) by @Exitus
-- [DCRDEX Atomic-Swap Art](https://twitter.com/exitusdcr/status/1518466782037745666) by Exitus
+- [DCRDEX Atomic-Swap Art](https://twitter.com/exitusdcr/status/1518466782037745666) by @Exitus
+- [Decred Ramadan](https://twitter.com/DecredArabia/status/1509991552382349312) by @DecredArabia
 
 Please post yours memes in the #DCR Memes channel on Discord or Matrix!
 
