--- a/journal/202204.md
+++ b/journal/202204.md
@@ -263,6 +263,7 @@ Applesaucesome will also be posting technicals and other information.
 **Selected articles:**
 
 - [Top 10 Privacy Coins & How To Buy Them](https://www.binance.com/en/blog/fiat/top-10-privacy-coins--how-to-buy-them-421499824684903655) by Binance (Decred #4)
+- [Decred price soars 45% in one day three weeks before a major hard fork](https://cointelegraph.com/news/decred-price-soars-45-in-one-day-three-weeks-before-a-major-hard-fork)
 
 
 **Videos:**
@@ -325,6 +326,8 @@ Selected Twitter discussions:
 ## Markets
 
 In April DCR was trading between USD $52.40-$86.2 / BTC 0.001295-0.002163. The average daily rate was $57.22.
+
+DCR rallied by nearly 45% to over $86 in one day on April 18th, its highest level in four months. This pump was unfortunately short-lived and speculated to be the work of the [Mining Cartel(s) suppressing Decred](https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b).
 
 
 { dcrdex updates, esp. volume }
