--- a/journal/202204.md
+++ b/journal/202204.md
@@ -263,7 +263,7 @@ Applesaucesome will also be posting technicals and other information.
 **Selected articles:**
 
 - [Top 10 Privacy Coins & How To Buy Them](https://www.binance.com/en/blog/fiat/top-10-privacy-coins--how-to-buy-them-421499824684903655) by Binance (Decred #4)
-- [Decred price soars 45% in one day three weeks before a major hard fork](https://cointelegraph.com/news/decred-price-soars-45-in-one-day-three-weeks-before-a-major-hard-fork)
+- [Decred price soars 45% in one day three weeks before a major hard fork](https://cointelegraph.com/news/decred-price-soars-45-in-one-day-three-weeks-before-a-major-hard-fork) by Cointelegraph
 
 
 **Videos:**
