--- a/journal/202204.md
+++ b/journal/202204.md
@@ -250,13 +250,13 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Media
 
-[Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) has written a cloud-based Decred [full-node tutorial](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) using Digital Ocean.
+- [Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) has written a cloud-based Decred [full-node tutorial](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) using Digital Ocean.
 
 **Why run a full node you might ask?**
 
 *Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness. There are also [Raspberry PI Tutorials](https://youtu.be/B-5O_GBcbV0) available.*
 
-A [website](https://www.decredsociety.com/) dedicated to Decred related ideas, news, and other aspects by @DecredSociety 
+- A [website](https://www.decredsociety.com/) dedicated to Decred related ideas, news, and other aspects by @DecredSociety 
 
 Applesaucesome will also be posting technicals and other information.  
 
