use canonical youtube links
https://github.com/xaur/decred-news/blob/docs/guidelines.md#use-canonical-links-without-tracking

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -256,7 +256,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 **Why run a full node you might ask?**
 
-*Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness. There are also [Raspberry PI Tutorials](https://youtu.be/B-5O_GBcbV0) available.*
+*Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness. There are also [Raspberry PI Tutorials](https://www.youtube.com/watch?v=B-5O_GBcbV0) available.*
 
 - A [website](https://www.decredsociety.com/) dedicated to Decred related ideas, news, and other aspects by @DecredSociety 
 
@@ -270,10 +270,10 @@ Applesaucesome will also be posting technicals and other information.
 
 **Videos:**
 
-- [Decred News Update - On-Chain Voting Underway, dcrd 1.7.1, LN Upgrades, Subsidy Change + New Host!](https://youtu.be/BSHywc5qRzU) by @Exitus
-- [Decred DEX Tutorial: Peer-to-Peer Atomic Swap Trading](https://youtu.be/XaE_xzGKjeQ) by @Exitus
-- [Decred Block Explorer - DCRDATA Series Part 1](https://youtu.be/o4Cye1CRThs) by @DecredSociety
-- [Hard Fork vs Soft Fork - Decred Fundamentals](https://youtu.be/DmkQrk3OInU) by @Decred Society
+- [Decred News Update - On-Chain Voting Underway, dcrd 1.7.1, LN Upgrades, Subsidy Change + New Host!](https://www.youtube.com/watch?v=BSHywc5qRzU) by @Exitus
+- [Decred DEX Tutorial: Peer-to-Peer Atomic Swap Trading](https://www.youtube.com/watch?v=XaE_xzGKjeQ) by @Exitus
+- [Decred Block Explorer - DCRDATA Series Part 1](https://www.youtube.com/watch?v=o4Cye1CRThs) by @DecredSociety
+- [Hard Fork vs Soft Fork - Decred Fundamentals](https://www.youtube.com/watch?v=DmkQrk3OInU) by @Decred Society
 - [Six Years of Decred - Part 1](https://www.youtube.com/watch?v=0Z50aW-RZtw) by @DecredSociety
 - [Six Years of Decred - Part 2](https://www.youtube.com/watch?v=CI4yFLfHnqc) by @DecredSociety
 - [What Is Decred (DCR) Crypto And How Is It Performing?](https://www.youtube.com/watch?v=30waU59s4Jk) by Kalkine Media
