start intro ideas

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -4,7 +4,11 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro, major news of the month, don't put any links here }
+{ highlights ideas
+
+- transfer of funds into the new treasury
+
+}
 
 Contents: { sync }
 
