--- a/journal/202204.md
+++ b/journal/202204.md
@@ -35,14 +35,18 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 _dcrd is a full node implementation that powers Decred's peer-to-peer network around the world._
 
+- [Removed all RPCs](https://github.com/decred/dcrd/pull/2911) and associated code related to missed and expired tickets.
 - [Optimized old block](https://github.com/decred/dcrd/pull/2912) version upgrade checks.
 - [Documentation for backports](https://github.com/decred/dcrd/pull/2934) has been added to docs.
-- ReadME.md has been updated for the [new subsidy calculations](https://github.com/decred/dcrd/pull/2933).
 - queueHandler process [cleaned up](https://github.com/decred/dcrd/pull/2929) for rpcserver.
 - Test chain generator [updated](https://github.com/decred/dcrd/pull/2928) for deprecated subsidy parameters. 
-- Implemented a [subsidy cache](https://github.com/decred/dcrd/pull/2920) with functions to calculate subsidies for proof-of-work, votes, and the treasury. Also includes a full suite of tests and benchmarks.
 - Fixed error handling in [compact signature recovery](https://github.com/decred/dcrd/pull/2914) to be consistent with the rest of the code base.
 - Various bug fixes, code optimizations, and other improvements, especially for the major [subsidy split consensus change](https://proposals.decred.org/record/427e1d4).
+
+More progress made towards the [primitives](https://github.com/decred/dcrd/issues/2786) module:
+
+- ReadME.md has been updated for the [new subsidy calculations](https://github.com/decred/dcrd/pull/2933).
+- Implemented a [subsidy cache](https://github.com/decred/dcrd/pull/2920) with functions to calculate subsidies for proof-of-work, votes, and the treasury. Also includes a full suite of tests and benchmarks.
 
 <a id="dcrwallet" />
 
