--- a/journal/202204.md
+++ b/journal/202204.md
@@ -54,7 +54,7 @@ More progress made towards the [primitives](https://github.com/decred/dcrd/issue
 
 _dcrwallet is a wallet server used by command-line and graphical wallet applications._
 
-- TreasuryPolicies and SetTreasuryPolicy function requests added to the rpc server. This will allow decrediton to now get and update treasury policies.
+- TreasuryPolicies and SetTreasuryPolicy [function requests](https://github.com/decred/dcrwallet/pull/2140) added to the RPC server. This will allow Decrediton to now get and update treasury policies.
 - Defualt [fee amount](https://github.com/decred/dcrwallet/pull/2149) constant is now more readable.
 - Updated to [latest gRPC](https://github.com/decred/dcrwallet/pull/2143)
 
