--- a/journal/202204.md
+++ b/journal/202204.md
@@ -266,9 +266,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 *Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness. There are also [Raspberry PI Tutorials](https://www.youtube.com/watch?v=B-5O_GBcbV0) available.*
 
-- A [website](https://www.decredsociety.com/) dedicated to Decred related ideas, news, and other aspects by @DecredSociety 
-
-Applesaucesome will also be posting technicals and other information.  
+- A [website](https://www.decredsociety.com/) dedicated to Decred related ideas, news, and other aspects by @DecredSociety. @Applesaucesome will also be posting technicals and other information related to Decred's markets.
 
 **Selected articles:**
 
@@ -338,9 +336,6 @@ Selected Twitter discussions:
 In April DCR was trading between USD $52.40-$86.2 / BTC 0.001295-0.002163. The average daily rate was $57.22.
 
 DCR rallied by nearly 45% to over $86 in one day on April 18th, its highest level in four months. This pump was unfortunately short-lived and speculated to be the work of the [Mining Cartel(s) suppressing Decred](https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b).
-
-
-{ dcrdex updates, esp. volume }
 
 
 ## Relevant External
