--- a/journal/202204.md
+++ b/journal/202204.md
@@ -255,7 +255,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 **Attended:**
 
-- [Exitus attended a cryptocurrency meetup](https://twitter.com/exitusdcr/status/1506118577035825157) at the Hashhouse in Medellin, Colombia on March 21. There he informed attendees about Decred and it's unique features.
+- [Exitus attended a cryptocurrency meetup](https://twitter.com/exitusdcr/status/1506118577035825157) at the Hashhouse in Medellin, Colombia on March 21. There he informed attendees about Decred and its unique features.
 - [Insaf Nori](https://twitter.com/in_insaf/status/1506976446044114944) was invited to talk about [Blockchain Technology](https://decredcommunity.github.io/events/index/20220326.1) and Decred Technology at the half-day training organized for their members.
 
 ## Media
@@ -320,8 +320,6 @@ Other non-English content:
 Comm systems news:
 
 - {}
-
-{ selected discussed topics, as bullet list or one paragraph per topic }
 
 Selected Reddit posts:
 
