--- a/journal/202204.md
+++ b/journal/202204.md
@@ -59,9 +59,16 @@ Decredition 1.7.2 will include many improvements. Users are urged to [upgrade](h
 - The Staking tab now features [an infographic](https://github.com/decred/decrediton/pull/3740) for first time ticket buyers, reminding users the basics of Decred's time-locked ticket-based voting system.
 - SPV mode is [no longer experimental](https://github.com/decred/decrediton/pull/3739) for the DCRDEX. Users can access the DEX tab while running Decredition in SPV mode.
 - An [alert](https://github.com/decred/decrediton/pull/3736) is now in place in the Governance tab when using any un-upgraded VSP. 
+- Enhanced Vote details page to show a [warning](https://github.com/decred/decrediton/pull/3732) if consensus vote choices cast by the VSP differ from ones set in the user's wallet. The page will also show the VSP that managed the ticket, and the transaction that has spent (voted with) it.
+- Added [block voting](https://github.com/decred/decrediton/pull/3733) info to the Vote page (last block validity, voting version, vote bits).
 - Vote choices have been added to [transaction details](https://github.com/decred/decrediton/pull/3730) when a ticket is called to vote.
 - UI now more clearly [notifies users](https://github.com/decred/decrediton/pull/3726) about new Politeia and Consensus votes.
 - A [Treasury Spending Tab](https://github.com/decred/decrediton/pull/3718) has been introduced. This is where users will vote on treasury spends.
+- Added redesigned [Tutorial](https://github.com/decred/decrediton/pull/3669) views under the Settings tab. { looks like a big addition, maybe expand this bullet if tested how it feels }
+
+- ~{ 3735 3734 } bug fixes.
+
+{ image candidates: 3669! 3730 3733 3734 }
 
 <a id="politeia" />
 
