Updated Outreach section with Monde PR details

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -235,6 +235,18 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { overview of outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending the message out" }
 
+Monde PR’s achievements: 
+
+- Pitched Decred to 8 PR ops in finance and crypto publications
+- Responded to one request for comments
+
+Secured the following news articles:
+
+- @jy-p was featured in an ARTE-TV documentary titled ‘Are Cryptocurrencies Better Money?”. The documentary was broadcast on ARTE TV in [French](https://www.arte.tv/fr/videos/101938-007-A/42-la-reponse-a-presque-tout/) and [German](https://www.arte.tv/de/videos/101938-007-A/sind-kryptowaehrungen-das-bessere-geld/) and was also shared online. Here is a version with [English subtitles](https://vimeo.com/694783460) (password Db9p6ki).  
+- @jy-p was interviewed by [Coin Rivet](https://coinrivet.com/decred-founder-reveals-how-it-bounced-back-from-miner-manipulation/) which covered Decred’s progress since 2018 and the subsidy split change. The article was syndicated to {Yahoo! Finance](https://finance.yahoo.com/news/decred-founder-reveals-bounced-back-135936130.html)
+- A piece in [Cryptopolitan](https://www.cryptopolitan.com/20-quotes-about-bitcoin-predictions/#8_Jake_Yocom-Piatt) featuring commentary from @jy-p on Bitcoin.  
+- An article in Finder featuring commentary from @jz on Litecoin. 
+
 
 ## Events
 
