add gov consensus

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -198,6 +198,8 @@ A [proposal](https://proposals.decred.org/record/1a290d8) to continue with phase
 
 The [proposal](https://proposals.decred.org/record/3326c82) to continue phase 3 of DCRDEX development with $370,000 was approved in January with 97% support and 57% ticket turnout.
 
+All of the consensus changes deployed as part of the v1.7 release (DCP0007-DCP0010) were approved by voters with very similar voting outcomes: 99.9% approval of the 60% of tickets that voted (as opposed to abstaining, which ~40% did), there were just 61 votes against the subsidy split change. The changes activated on May 8, so along with the new subsidy split there are automatic ticket revocations, and explicit version upgrades.
+
 
 ## Network
 
