--- a/journal/202204.md
+++ b/journal/202204.md
@@ -65,7 +65,7 @@ Decredition 1.7.2 will include many improvements. Users are urged to [upgrade](h
 - UI now more clearly [notifies users](https://github.com/decred/decrediton/pull/3726) about new Politeia and Consensus votes.
 - A [Treasury Spending Tab](https://github.com/decred/decrediton/pull/3718) has been introduced. This is where users will vote on treasury spends.
 - Added redesigned [Tutorial](https://github.com/decred/decrediton/pull/3669) views under the Settings tab. { looks like a big addition, maybe expand this bullet if tested how it feels }
-- Fixed a bug where the Treasury Spending page crashed with undefined `treasuryPolicies`.
+- Fixed a bug where the Treasury Spending page [crashed with undefined](https://github.com/decred/decrediton/pull/3735) `treasuryPolicies`.
 - Fixed [snackbar layout](https://github.com/decred/decrediton/pull/3734) bug.
 
 { image candidates: 3669! 3730 3733 3734 }
