--- a/journal/202204.md
+++ b/journal/202204.md
@@ -55,16 +55,24 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 Decredition 1.7.2 will include many improvements. Users are urged to [upgrade](https://decred.org/wallets/) when it is released.
 
-- DCRDEX [login will be skipped](https://github.com/decred/decrediton/pull/3749) once the DEX is initially launched. This should make loading up the DEX faster and improve flow.
-- DCRDEX updated to [v0.4.3](https://github.com/decred/decrediton/pull/3748) with some new features and important bug fixes. More in the [DEX](#dcrdex) section.
-- Per-account encryption is now automatic for [restored wallets](https://github.com/decred/decrediton/pull/3746).
-- Performance improvements in the [transaction's history tab](https://github.com/decred/decrediton/pull/3745). Notably, rows are now loaded gradually using infinite scrolling, which will reduce bottlenecks and sluggishness. Added highlighting of the last clicked row to keep track of user's position in the list.
-- The Staking tab now features [an infographic](https://github.com/decred/decrediton/pull/3740) for first time ticket buyers, reminding users the basics of Decred's time-locked ticket-based voting system.
+DCRDEX integration:
+
 - SPV mode is [no longer experimental](https://github.com/decred/decrediton/pull/3739) for the DCRDEX. Users can access the DEX tab while running Decredition in SPV mode.
-- An [alert](https://github.com/decred/decrediton/pull/3736) is now in place in the Governance tab when using any un-upgraded VSP. A VSP that runs older software may not be able to use all vote preferences when voting users' tickets.
-- Enhanced Vote details page to show a [warning](https://github.com/decred/decrediton/pull/3732) if consensus vote choices cast by the VSP differ from those set in the user's wallet. The page will also show the VSP that managed the ticket, and the transaction that has spent (voted with) it.
+- DEX [login will be skipped](https://github.com/decred/decrediton/pull/3749) once the DEX is initially launched. This should make loading up the DEX faster and improve flow.
+- DCRDEX module updated to [v0.4.3](https://github.com/decred/decrediton/pull/3748) with some new features and important bug fixes. More in the [DEX](#dcrdex) section.
+
+VSP oversight enhancements:
+
 - Added [block voting](https://github.com/decred/decrediton/pull/3733) info to the Vote page (last block validity, voting version, vote bits).
+- Enhanced Vote details page to show a [warning](https://github.com/decred/decrediton/pull/3732) if consensus vote choices cast by the VSP differ from those set in the user's wallet. The page will also show the VSP that managed the ticket, and the transaction that has spent (voted with) it.
+- An [alert](https://github.com/decred/decrediton/pull/3736) is now in place in the Governance tab when using any un-upgraded VSP. A VSP that runs older software may not be able to use all vote preferences when voting users' tickets.
+
+Other changes:
+
 - Added redesigned [Tutorial](https://github.com/decred/decrediton/pull/3669) views under the Settings tab covering many aspects of Decred.
+- The Staking tab now features [an infographic](https://github.com/decred/decrediton/pull/3740) for first time ticket buyers, reminding users the basics of Decred's time-locked ticket-based voting system.
+- Performance improvements in the [transaction's history tab](https://github.com/decred/decrediton/pull/3745). Notably, rows are now loaded gradually using infinite scrolling, which will reduce bottlenecks and sluggishness. Added highlighting of the last clicked row to keep track of user's position in the list.
+- Per-account encryption is now automatic for [restored wallets](https://github.com/decred/decrediton/pull/3746).
 - More automated UI testing coverage. { 3743 }
 
 - ~{ 3735 3734 3741*3 } bug fixes.
