Dev Politeia expand backend coverage a bit

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -87,9 +87,12 @@ Other changes:
 
 _Politeia is Decred's proposal system. It is used to request funding from the Decred treasury._
 
-- An exported [initialization function](https://github.com/decred/politeia/pull/1634) for the tstore client has been added. This is used by plugins.
+Backend changes:
+
+- An exported [initialization function](https://github.com/decred/politeia/pull/1634) for the tstore client has been added. This is used by plugins. { too small and internal }
 - [legacypoliteia](https://github.com/decred/politeia/pull/1631), a CLI tool that will be used to convert and import legacy git backend data into the tstore backend has been added.
 - Plugin Architecture [doc added](https://github.com/decred/politeia/pull/1628).
+- Fixed [two](https://github.com/decred/politeia/pull/1633) [bugs](https://github.com/decred/politeia/pull/1635) in migration code (did not affect normal operation of Politeia).
 
 <a id="vspd" />
 
