Dev Politeia remove March activity but add In progress
Importing legacy data is an important and complex endeavor. We can
mention some of March activity as a context for what's currently in
progress.

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -89,10 +89,11 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 Backend changes:
 
-- An exported [initialization function](https://github.com/decred/politeia/pull/1634) for the tstore client has been added. This is used by plugins. { too small and internal }
-- [legacypoliteia](https://github.com/decred/politeia/pull/1631), a CLI tool that will be used to convert and import legacy git backend data into the tstore backend has been added.
-- Plugin Architecture [doc added](https://github.com/decred/politeia/pull/1628).
 - Fixed [two](https://github.com/decred/politeia/pull/1633) [bugs](https://github.com/decred/politeia/pull/1635) in migration code (did not affect normal operation of Politeia).
+
+In progress:
+
+- [Importing legacy proposals](https://github.com/decred/politeia/issues/1425) into the new Politeia database. A new tool to [convert](https://github.com/decred/politeia/pull/1631) legacy data into the new format has been merged in March. Up next is the [import](https://github.com/decred/politeia/pull/1632) tool for loading converted data into the production Politeia database.
 
 <a id="vspd" />
 
